@@ -287,7 +287,7 @@ static void Randomize(RNGtype kind)
     RNG_Init(kind, seed);
 }
 
-static SEXP GetRNGkind(SEXP seeds)
+static void GetRNGkind(SEXP seeds)
 {
     /* Load RNG_kind, N01_kind from .Random.seed if present */
     int tmp, *is;
@@ -295,15 +295,12 @@ static SEXP GetRNGkind(SEXP seeds)
 
     if (isNull(seeds))
 	seeds = findVarInFrame(R_GlobalEnv, R_SeedsSymbol);
-    if (seeds == R_UnboundValue) return seeds;
+    if (seeds == R_UnboundValue) return;
     if (!isInteger(seeds)) {
 	if (seeds == R_MissingArg) /* How can this happen? */
 	    error(_(".Random.seed is a missing argument with no default"));
-	warning(_(".Random.seed is not an integer vector but of type '%s'"),
+	error(_(".Random.seed is not an integer vector but of type '%s'"),
 		type2char(TYPEOF(seeds)));
-	seeds = coerceVector(seeds, INTSXP);
-	if(!isInteger(seeds))
-	    error(_("unable to coerce .Random.seed to an integer vector"));
     }
     is = INTEGER(seeds);
     tmp = is[0];
@@ -329,7 +326,7 @@ static SEXP GetRNGkind(SEXP seeds)
 	error(_(".Random.seed[1] is not a valid RNG kind (code)"));
     }
     RNG_kind = newRNG; N01_kind = newN01;
-    return seeds;
+    return;
 }
 
 
@@ -344,7 +341,7 @@ void GetRNGstate()
     if (seeds == R_UnboundValue) {
 	Randomize(RNG_kind);
     } else {
-	seeds = GetRNGkind(seeds);
+	GetRNGkind(seeds);
 	len_seed = RNG_Table[RNG_kind].n_seed;
 	/* Not sure whether this test is needed: wrong for USER_UNIF */
 	if(LENGTH(seeds) > 1 && LENGTH(seeds) < len_seed + 1)
