@@ -310,6 +310,10 @@ DEPRECATED & DEFUNCT
 	mlistMetaName(), removeMethodsObject() and seemsS4Object() are
 	defunct.
 
+    o	Use of a non-integer .Randon.seed is now an error.  (R itself
+	has never generated such values, but user code has, and
+	R >= 2.6.0 has given a warning.)
+
     o	allGenerics(), getMethodsMetaData() are deprecated.
 
     o	In package installation, SaveImage: yes is now ignored, and
